--- a/JDB_DelphiVCL.dproj
+++ b/JDB_DelphiVCL.dproj
@@ -5,7 +5,7 @@
         <ProjectVersion>20.3</ProjectVersion>
         <FrameworkType>VCL</FrameworkType>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Release</Config>
+        <Config Condition="'$(Config)'==''">Debug</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <ProjectName Condition="'$(ProjectName)'==''">JDB_DelphiVCL</ProjectName>
         <TargetedPlatforms>1</TargetedPlatforms>
@@ -95,6 +95,7 @@
         <DCC_IntegerOverflowCheck>true</DCC_IntegerOverflowCheck>
         <DCC_RangeChecking>true</DCC_RangeChecking>
         <DCC_Inlining>off</DCC_Inlining>
+        <DCC_IncludeDCUsInUsesCompletion>true</DCC_IncludeDCUsInUsesCompletion>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
@@ -135,7 +136,7 @@
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="Source\WindowsVCL\CustomComponents\Graphic2DUnits\Graphic2DTypes.pas"/>
-        <DCCReference Include="Source\WindowsVCL\CustomComponents\Graphic2DUnits\GraphicsListClass.pas"/>
+        <DCCReference Include="Source\WindowsVCL\CustomComponents\Graphic2DUnits\Graphic2DListClass.pas"/>
         <DCCReference Include="Source\WindowsVCL\CustomComponents\GraphXYUnits\GraphPlotsListClass.pas"/>
         <DCCReference Include="Source\WindowsVCL\CustomComponents\GraphXYUnits\GraphXYComponent.pas"/>
         <DCCReference Include="Source\WindowsVCL\CustomComponents\GraphXYUnits\GraphXYFrame.pas">
