(1) updated project settings (2) updated search paths

--- a/JDB_DelphiVCL.dproj
+++ b/JDB_DelphiVCL.dproj
@@ -166,7 +166,11 @@
                 <Source>
                     <Source Name="MainSource">JDB_DelphiVCL.dpk</Source>
                 </Source>
-                <Excluded_Packages/>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\jasonbarry\Documents\Embarcadero\Studio\Projects\BuildOutput\JDB_DelphiVCL.bpl">File C:\Users\jasonbarry\Documents\Embarcadero\Studio\Projects\BuildOutput\JDB_DelphiVCL.bpl not found</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k290.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp290.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="5">
                 <DeployFile LocalName="$(BDS)\Redist\iossimulator\libcgunwind.1.0.dylib" Class="DependencyModule">
