--- a/TestGraphic2D.dproj
+++ b/TestGraphic2D.dproj
@@ -4,7 +4,7 @@
         <ProjectVersion>20.3</ProjectVersion>
         <FrameworkType>VCL</FrameworkType>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win64</Platform>
         <ProjectName Condition="'$(ProjectName)'==''">TestGraphic2D</ProjectName>
         <TargetedPlatforms>3</TargetedPlatforms>
@@ -71,7 +71,7 @@
         <UWP_DelphiLogo44>$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_44.png</UWP_DelphiLogo44>
         <UWP_DelphiLogo150>$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_150.png</UWP_DelphiLogo150>
         <SanitizedProjectName>TestGraphic2D</SanitizedProjectName>
-        <DCC_UnitSearchPath>..\JDB_Mathematics\Source;..\JDB_Mathematics\Source\AxisConversion;..\JDB_Mathematics\Source\Geometry;..\JDB_Mathematics\Source\LinearAlgebra;..\JDB_Mathematics\Source\LinearAlgebra\Matrices;..\JDB_Graphics\Source;..\JDB_Graphics\Source\CustomDirect2DCanvas;..\JDB_Graphics\Source\GraphicDrawer;..\JDB_Graphics\Source\GraphicDrawingClasses;..\JDB_Graphics\Source\GraphicDrawingClasses\GraphicEntityFoundationalShapeClasses;..\JDB_Graphics\Source\GraphicDrawingClasses\GraphicEntityGroupClasses;..\JDB_Graphics\Source\GraphicDrawingClasses\GraphicEntityPlottingClasses;..\JDB_DelphiVCL\Source;..\JDB_DelphiVCL\Source\WindowsVCL;..\JDB_DelphiVCL\Source\WindowsVCL\CustomComponents;..\JDB_DelphiVCL\Source\WindowsVCL\CustomComponents\Graphic2DUnits;..\JDB_DelphiVCL\Source\WindowsVCL\CustomComponents\GraphXYUnits;..\JDB_DelphiVCL\Source\WindowsVCL\HelperClasses;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <DCC_UnitSearchPath>..\JDB_Mathematics\Source;..\JDB_Mathematics\Source\AxisConversion;..\JDB_Mathematics\Source\Geometry;..\JDB_Mathematics\Source\LinearAlgebra;..\JDB_Mathematics\Source\LinearAlgebra\Matrices;..\JDB_Graphics\Source;..\JDB_Graphics\Source\CustomDirect2DCanvas;..\JDB_Graphics\Source\GraphicDrawer;..\JDB_Graphics\Source\GraphicEntityClasses;..\JDB_Graphics\Source\GraphicEntityClasses\GraphicEntityFoundationalClasses;..\JDB_Graphics\Source\GraphicEntityClasses\GraphicEntityFoundationalClasses\GraphicEntityGeometryClasses;..\JDB_Graphics\Source\GraphicEntityClasses\GraphicEntityFoundationalClasses\GraphicEntityShapeClasses;..\JDB_Graphics\Source\GraphicEntityClasses\GraphicEntityGroupClasses;..\JDB_Graphics\Source\GraphicEntityClasses\GraphicEntityPlottingClasses;..\JDB_DelphiVCL\Source;..\JDB_DelphiVCL\Source\WindowsVCL;..\JDB_DelphiVCL\Source\WindowsVCL\CustomComponents;..\JDB_DelphiVCL\Source\WindowsVCL\CustomComponents\Graphic2DUnits;..\JDB_DelphiVCL\Source\WindowsVCL\CustomComponents\GraphXYUnits;..\JDB_DelphiVCL\Source\WindowsVCL\HelperClasses;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <VerInfo_Locale>7177</VerInfo_Locale>
         <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <DCC_Inlining>auto</DCC_Inlining>
